# ti-raytracer

./: README.md
RayTracer/: CMakeLists.txt  basic_objects.cpp  basic_objects.h  main.cpp  types.cpp  types.h
